pkg/kube/gateway/gateway/testdata/backend-tls.golden.yaml
listeners:
    kgw--listener-http-80:
        port: 80
backends:
    kgw--httproute.shop.secure_r0:
        provider: rp
        origin_url: https://secure-svc.shop.svc:8443
        hosts:
            - shop.example.com
        listener_names:
            - kgw--listener-http-80
        cache_key_prefix: httproute.shop.secure
        tls:
            server_name: secure.internal
            certificate_authority_pem: |-
                -----BEGIN CERTIFICATE-----
                MIIBkDCCATWgAwIBAgIUBM0wEvGb47MAWCsWiWOuKebif1cwCgYIKoZIzj0EAwIw
[...]
                +1thDxowJBFHpF8Cwl9p2aeltmY=
                -----END CERTIFICATE-----
            exclude_system_roots: true
        path_routing_disabled: true
        path_defaults_disabled: true
        preserve_host: true
        paths:
            - path: /secure
              match_type: segment
              handler: proxy
              methods:
                - '*'
    kgw--httproute.shop.secure_r1:
        provider: rp
        origin_url: https://system-svc.shop.svc:8443
        hosts:
            - shop.example.com
        listener_names:
            - kgw--listener-http-80
        cache_key_prefix: httproute.shop.secure
        tls:
            server_name: system.internal
        path_routing_disabled: true
        path_defaults_disabled: true
        preserve_host: true
        paths:
            - path: /system
              match_type: segment
              handler: proxy
              methods:
                - '*'
    kgw--httproute.shop.secure_r2:
        provider: alb
        hosts:
            - shop.example.com
        listener_names:
            - kgw--listener-http-80
        path_routing_disabled: true
        path_defaults_disabled: true
        paths:
            - path: /broken
              match_type: segment
              handler: alb
              methods:
                - '*'
        alb:
            mechanism: rr
            pool:
                - name: kgw--httproute.shop.secure_r2_b0
                  weight: 1
    kgw--httproute.shop.secure_r2_b0:
        provider: rp
        origin_url: https://unresolved.kgw.invalid
        listener_names:
            - kgw--listener-http-80
        cache_key_prefix: httproute.shop.secure
        path_routing_disabled: true
        path_defaults_disabled: true
        paths:
            - path: /
              match_type: prefix
              handler: localresponse
              methods:
                - '*'
              response_code: 500
              response_body: unresolved backend reference
